--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<img id="logo" src="http://i.imgur.com/qze7gGg.png" alt="" height="300" width="300">
+			<img id="logo" src="media/logo.png" alt="">
 			<h1>Welcome to Citadel Metal Supply!</h1>
 			<h2>Our site is coming soon!</h2>
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> for a prompt response!</h3>
