--- a/public/main.css
+++ b/public/main.css
@@ -21,4 +21,18 @@ body {
   #logo {
 	width: 45%;
   }
+  
+  #wrapper {
+  	font-size: 1.3em;
+  }
+}
+
+@media screen and (min-width: 40.5em){
+	#logo {
+		width: 35%;
+	}
+	
+	#wrapper {
+		font-size: 1.5em;
+	}
 }
