--- a/public/main.css
+++ b/public/main.css
@@ -19,20 +19,20 @@ body {
 
 @media screen and (min-width: 28.75em){
   #logo {
-	width: 45%;
+	width: 58%;
   }
   
   #wrapper {
-  	font-size: 1.3em;
+  	font-size: .9em;
   }
 }
 
 @media screen and (min-width: 40.5em){
 	#logo {
-		width: 35%;
+		width: 30%;
 	}
 	
 	#wrapper {
-		font-size: 1.5em;
+		font-size: 1.3em;
 	}
 }
