--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,18 @@
 			<img id="logo" src="http://i.imgur.com/qze7gGg.png" alt="">
 			<h1>Welcome to Citadel Metal Supply!</h1>
 			<h2>Our site is coming soon!</h2>
-			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> for a prompt response!</h3>
+			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
+			<div id='contact-box' class="group">
+			    <form action="/" method="post" class="well">
+			      <label for="name">Your Name:</label>
+			      <input type="text" name="name" class="span4" placeholder="John Smith...">
+			      <label for="email">Your email address:</label>
+			      <input type="text" name="email" class="span4" placeholder="email@example.com">
+			      <label for="to">Your message:</label>
+			      <textarea name="message" cols='30' rows="10"></textarea><br>
+			      <button type="submit" class="btn" value="Send">Submit</button>
+			    </form>
+			</div>
 		</div>
 	</body>
 </html>
