--- a/public/main.css
+++ b/public/main.css
@@ -21,6 +21,34 @@ h1 {
 	border: 3px solid black;
 }
 
+#contact-box{
+	text-align: center;
+	margin: auto;
+}
+
+form input{
+	display: block;
+	margin: .25em auto;
+	width: 80%;
+	font-size: 1em;
+	padding: .2em;
+}
+
+form textarea{
+	display: block;
+	margin: .3em auto;
+	width: 80%;
+	height: 12em;
+	font-size: 1em;
+	padding: .2em;
+}
+
+button {
+	margin: .25em auto;
+	width: 80%;
+	height: 3em;
+}
+
 @media screen and (min-width: 28.75em){
   #logo {
 	width: 58%;
