--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 			    <form action="/" method="post" class="well">
 			      <input type="text" name="name" class="span4" placeholder="John Smith...">
 			      <input type="text" name="email" class="span4" placeholder="email@example.com">
-			      <textarea name="message" cols='30' rows="10"></textarea><br>
+			      <textarea name="message" cols='30' rows="10"></textarea>
 			      <button type="submit" class="btn" value="Send">Submit</button>
 			    </form>
 			</div>
