--- a/views/index.erb
+++ b/views/index.erb
@@ -12,9 +12,9 @@
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<div id='contact-box' class="group">
 			    <form action="/" method="post" class="well">
-			      <input type="text" name="name" class="span4" placeholder="John Smith...">
-			      <input type="text" name="email" class="span4" placeholder="email@example.com">
-			      <textarea name="message" cols='30' rows="10"></textarea>
+			      <input type="text" name="name" class="span4" placeholder="Your Name">
+			      <input type="text" name="email" class="span4" placeholder="Your Email">
+			      <textarea name="message" cols='30' rows="10" placeholder="Your Message"></textarea>
 			      <button type="submit" class="btn" value="Send">Submit</button>
 			    </form>
 			</div>
