--- a/public/main.css
+++ b/public/main.css
@@ -32,6 +32,8 @@ form input{
 	width: 95%;
 	font-size: 2em;
 	padding: .2em;
+	background-color: #2F2F2F;
+    	border: 1px solid #424242;
 }
 
 form textarea{
@@ -41,12 +43,17 @@ form textarea{
 	height: 12em;
 	font-size: 2em;
 	padding: .2em;
+	background-color: #2F2F2F;
+    	border: 1px solid #424242;
 }
 
 button {
 	margin: .25em auto;
 	width: 95%;
 	height: 5em;
+	background-color: #AFAFAF;
+    	border: 1px solid #424242;
+    	font-size: 1.5em;
 }
 
 @media screen and (min-width: 28.75em){
