--- a/public/main.css
+++ b/public/main.css
@@ -35,6 +35,7 @@ form input{
 	padding: .2em;
 	background-color: #2F2F2F;
     	border: 1px solid #424242;
+    	color: gray;
 }
 
 form textarea{
@@ -44,6 +45,7 @@ form textarea{
 	height: 12em;
 	font-size: 2em;
 	padding: .2em;
+	color: gray;
 	background-color: #2F2F2F;
     	border: 1px solid #424242;
 }
