--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
 			<h2>Our site is coming soon!</h2>
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<div id='contact-div' class="group">
-			    <form action="/" method="post" class="well">
+			    <form action="/contact" method="post" class="well">
 			      <input type="text" name="name" class="span4" placeholder="Your Name">
 			      <input type="text" name="email" class="span4" placeholder="Your Email">
 			      <textarea name="message" cols='30' rows="10" placeholder="Your Message"></textarea>
