--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,10 @@ h1 {
 	color: white;
 }
 
+h3 {
+	padding: 0 2em;
+}
+
 #logo {
 	margin-top: 1em;
 	width: 75%;
@@ -60,21 +64,81 @@ button {
 }
 
 @media screen and (min-width: 28.75em){
-  #logo {
+
+	#logo {
 	width: 58%;
-  }
-  
-  #wrapper {
-  	font-size: .9em;
-  }
+	}
+
+	#wrapper {
+		font-size: .9em;
+	}
+
+	form input {
+		width: 75%;
+		font-size: 1em;
+		padding: .2em;
+		background-color: #2F2F2F;
+	    border: 1px solid #424242;
+	    color: gray;
+	}
+
+	form textarea {
+		width: 75%;
+		height: 12em;
+		font-size: 1em;
+		padding: .2em;
+		color: gray;
+		background-color: #2F2F2F;
+	    border: 1px solid #424242;
+	}
+
+	button {
+		margin: .25em auto;
+		width: 75%;
+		background-color: #AFAFAF;
+    	border: 1px solid #424242;
+    	font-size: 1em;
+	}
 }
 
 @media screen and (min-width: 40.5em){
 	#logo {
-		width: 30%;
+		width: 15%;
 	}
 	
 	#wrapper {
 		font-size: 1.3em;
+	}
+
+	form input {
+		width: 75%;
+		max-width: 600px;
+		font-size: 1em;
+		padding: .2em;
+		background-color: #2F2F2F;
+	    	border: 1px solid #424242;
+	    	color: gray;
+	}
+
+	form textarea {
+		margin: .25em auto;
+		width: 75%;
+		max-width: 600px;
+		height: 12em;
+		font-size: 1em;
+		padding: .2em;
+		color: gray;
+		background-color: #2F2F2F;
+	    border: 1px solid #424242;
+	}
+
+	button {
+		margin: .25em auto;
+		width: 75%;
+		max-width: 600px;
+		background-color: #AFAFAF;
+    	border: 1px solid #424242;
+    	font-size: 1em;
+    	height: 2em;
 	}
 }
