--- a/public/main.css
+++ b/public/main.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #0C0C0C;
 	margin: 0;
+	font-family: 'Cinzel', serif;
 }
 
 #wrapper {
@@ -31,18 +32,20 @@ h3 {
 	color: gray;
 }
 
-form input{
+form input {
+	font-family: 'Cinzel', serif;
 	display: block;
 	margin: .25em auto;
 	width: 95%;
 	font-size: 2em;
 	padding: .2em;
 	background-color: #2F2F2F;
-    	border: 1px solid #424242;
-    	color: gray;
+    border: 1px solid #424242;
+    color: gray;
 }
 
-form textarea{
+form textarea {
+	font-family: 'Cinzel', serif;
 	display: block;
 	margin: .25em auto;
 	width: 95%;
@@ -51,16 +54,17 @@ form textarea{
 	padding: .2em;
 	color: gray;
 	background-color: #2F2F2F;
-    	border: 1px solid #424242;
+    border: 1px solid #424242;
 }
 
 button {
+	font-family: 'Cinzel', serif;
 	margin: .25em auto;
 	width: 95%;
 	height: 5em;
 	background-color: #AFAFAF;
-    	border: 1px solid #424242;
-    	font-size: 1.5em;
+    border: 1px solid #424242;
+    font-size: 1.5em;
 }
 
 @media screen and (min-width: 28.75em){
