--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,11 @@
       		<meta name="viewport" content="width=device-width, initial-scale=1.0">
       		<link href='https://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="main.css">
+		<title>Citadel Metal Supply</title>
 	</head>
 	<body>
 		<div id="wrapper">
-			<img id="logo" src="http://i.imgur.com/qze7gGg.png" alt="">
+			<img name="citadel-logo" id="logo" src="http://i.imgur.com/qze7gGg.png" alt="">
 			<h1>Welcome to Citadel Metal Supply!</h1>
 			<h2>Our site is coming soon!</h2>
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
