--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<% if flash[:confirmation] %>
 				<div id='flash'>
-			          <div class='flash info'>I'm sorry, Dave. I'm afraid I can't do that.</div>
+			          <div class='flash info'>Thanks for your email! We will get back to you shortly!</div>
 				</div>
 			<% end %>
 			<div id='contact-div' class="group">
