--- a/views/index.erb
+++ b/views/index.erb
@@ -13,9 +13,9 @@
 			<h2>Our site is coming soon!</h2>
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<% if flash[:confirmation] %>
-				<div id='flash'>
-			          <div class='flash info'>Thanks for your email! We will get back to you shortly!</div>
-				</div>
+				<script type="javascript">
+					alert("Thanks for your email! We will get back to you shortly!");
+				</script>
 			<% end %>
 			<div id='contact-div' class="group">
 			    <form action="/contact" method="post" class="well">
