--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,7 @@
 			<h2>Our site is coming soon!</h2>
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<% if flash[:confirmation] %>
-				<script type="javascript">
+				<script type="text/javascript">
 					alert("Thanks for your email! We will get back to you shortly!");
 				</script>
 			<% end %>
