--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
 		<meta charset="UTF-8"/>
       		<meta name="viewport" content="width=device-width, initial-scale=1.0">
       		<link href='https://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
+      		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="main.css">
 		<title>Citadel Metal Supply</title>
 	</head>
