--- a/public/main.css
+++ b/public/main.css
@@ -33,7 +33,8 @@ h3 {
 }
 
 form input {
-	font-family: 'Cinzel', serif;
+	/*font-family: 'Cinzel', serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
 	display: block;
 	margin: .25em auto;
 	width: 95%;
@@ -45,7 +46,8 @@ form input {
 }
 
 form textarea {
-	font-family: 'Cinzel', serif;
+	/*font-family: 'Cinzel', serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
 	display: block;
 	margin: .25em auto;
 	width: 95%;
@@ -58,7 +60,8 @@ form textarea {
 }
 
 button {
-	font-family: 'Cinzel', serif;
+	/*font-family: 'Cinzel', serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
 	margin: .25em auto;
 	width: 95%;
 	height: 3em;
