--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #0C0C0C;
 	margin: 0;
-	font-family: 'Cinzel', serif;
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
 #wrapper {
@@ -14,6 +14,7 @@ body {
 
 h1 {
 	color: white;
+	font-family: 'Cinzel', serif;
 }
 
 h3 {
