--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #0C0C0C;
 	margin: 0;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Noto Sans', sans-serif;
 }
 
 #wrapper {
@@ -35,7 +35,7 @@ h3 {
 
 form input {
 	/*font-family: 'Cinzel', serif;*/
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Noto Sans', sans-serif;
 	display: block;
 	margin: .25em auto;
 	width: 95%;
@@ -48,7 +48,7 @@ form input {
 
 form textarea {
 	/*font-family: 'Cinzel', serif;*/
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Noto Sans', sans-serif;
 	display: block;
 	margin: .25em auto;
 	width: 95%;
@@ -62,7 +62,7 @@ form textarea {
 
 button {
 	/*font-family: 'Cinzel', serif;*/
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Noto Sans', sans-serif;
 	margin: .25em auto;
 	width: 95%;
 	height: 3em;
