--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<img name="citadel-logo" id="logo" src="http://i.imgur.com/gfuPnoc.png" alt="">
+			<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
 			<h1>Welcome to Citadel Metal Supply!</h1>
 			<h2>Our site is coming soon!</h2>
 			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
