--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
 			<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
 			<h1>Welcome to Citadel Metal Supply!</h1>
 			<h2>Our site is coming soon!</h2>
-			<h3>For any questions you have, please email <span style="color:white">contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
+			<h3>For any questions you have, please email <span>contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<% if flash[:confirmation] %>
 				<script type="text/javascript">
 					alert("Thanks for your email! We will get back to you shortly!");
