--- a/public/main.css
+++ b/public/main.css
@@ -70,10 +70,10 @@ button {
 	margin: .25em auto;
 	width: 95%;
 	height: 3em;
-	background-color: #AFAFAF;
-    border: 1px solid #797979;
+	background-color: #8C2020;
+    border: 1px solid #500E0E;
     font-size: 1.2em;
-    color: #A2A2A2;
+    color: #C7C6C6;
 }
 
 @media screen and (min-width: 28.75em){
@@ -90,9 +90,9 @@ button {
 		width: 75%;
 		font-size: 1em;
 		padding: .2em;
-		background-color: #2F2F2F;
-	    border: 1px solid #424242;
-	    color: gray;
+		background-color: #CCCCCC;
+	    border: 1px solid #797979;
+	    color: #565656;
 	}
 
 	form textarea {
@@ -100,16 +100,16 @@ button {
 		height: 12em;
 		font-size: 1em;
 		padding: .2em;
-		color: gray;
-		background-color: #2F2F2F;
-	    border: 1px solid #424242;
+		color: #565656;
+		background-color: #CCCCCC;
+	    border: 1px solid #797979;
 	}
 
 	button {
 		margin: .25em auto;
 		width: 75%;
-		background-color: #AFAFAF;
-    	border: 1px solid #424242;
+		background-color: #8C2020;
+    	border: 1px solid #500E0E;
     	font-size: 1em;
     	height: 3em;
 	}
@@ -129,9 +129,9 @@ button {
 		max-width: 600px;
 		font-size: 1em;
 		padding: .2em;
-		background-color: #2F2F2F;
-    	border: 1px solid #424242;
-    	color: gray;
+		background-color: #CCCCCC;
+    	border: 1px solid #797979;
+    	color: #565656;
 	}
 
 	form textarea {
@@ -141,17 +141,17 @@ button {
 		height: 12em;
 		font-size: 1em;
 		padding: .2em;
-		color: gray;
-		background-color: #2F2F2F;
-	    border: 1px solid #424242;
+		color: #565656;
+		background-color: #CCCCCC;
+	    border: 1px solid #797979;
 	}
 
 	button {
 		margin: .25em auto;
 		width: 75%;
 		max-width: 600px;
-		background-color: #AFAFAF;
-    	border: 1px solid #424242;
+		background-color: #8C2020;
+    	border: 1px solid #500E0E;
     	font-size: 1em;
     	height: 2em;
 	}
