--- a/public/main.css
+++ b/public/main.css
@@ -1,162 +1,2 @@
-body {
-	background-color: #FBFBFB;
-	margin: 0;
-	font-family: 'Noto Sans', sans-serif;
-	-webkit-font-smoothing:antialiased !important;
-}
-
-#wrapper {
-	color: #484848;
-	width:100%;
-	margin: auto;
-	text-align: center;
-	font-size: .8em;
-}
-
-h1 {
-	color: #8C2020;
-	font-family: 'Cinzel', serif;
-}
-
-h3 {
-	padding: 0 2em;
-}
-
-h3 span {
-	color: #8C2020;
-}
-
-#logo {
-	margin-top: 1em;
-	width: 75%;
-}
-
-#contact-div{
-	text-align: center;
-	margin: auto;
-	color: gray;
-}
-
-form input {
-	/*font-family: 'Cinzel', serif;*/
-	font-family: 'Noto Sans', sans-serif;
-	display: block;
-	margin: .25em auto;
-	width: 95%;
-	font-size: 1.2em;
-	padding: .2em;
-	background-color: #CCCCCC;
-    border: 1px solid #797979;
-    color: #565656;
-}
-
-form textarea {
-	/*font-family: 'Cinzel', serif;*/
-	font-family: 'Noto Sans', sans-serif;
-	display: block;
-	margin: .25em auto;
-	width: 95%;
-	height: 12em;
-	font-size: 1.2em;
-	padding: .2em;
-	color: #565656;
-	background-color: #CCCCCC;
-    border: 1px solid #797979;
-}
-
-button {
-	/*font-family: 'Cinzel', serif;*/
-	font-family: 'Noto Sans', sans-serif;
-	margin: .25em auto;
-	width: 95%;
-	height: 3em;
-	background-color: #8C2020;
-    border: 1px solid #500E0E;
-    font-size: 1.2em;
-    color: #C7C6C6;
-}
-
-button:hover {
-	cursor:pointer;
-}
-
-@media screen and (min-width: 28.75em){
-
-	#logo {
-	width: 58%;
-	}
-
-	#wrapper {
-		font-size: .9em;
-	}
-
-	form input {
-		width: 75%;
-		font-size: 1em;
-		padding: .2em;
-		background-color: #CCCCCC;
-	    border: 1px solid #797979;
-	    color: #565656;
-	}
-
-	form textarea {
-		width: 75%;
-		height: 12em;
-		font-size: 1em;
-		padding: .2em;
-		color: #565656;
-		background-color: #CCCCCC;
-	    border: 1px solid #797979;
-	}
-
-	button {
-		margin: .25em auto;
-		width: 75%;
-		background-color: #8C2020;
-    	border: 1px solid #500E0E;
-    	font-size: 1em;
-    	height: 3em;
-	}
-}
-
-@media screen and (min-width: 40.5em){
-	#logo {
-		width: 15%;
-	}
-	
-	#wrapper {
-		font-size: 1.3em;
-	}
-
-	form input {
-		width: 75%;
-		max-width: 600px;
-		font-size: 1em;
-		padding: .2em;
-		background-color: #CCCCCC;
-    	border: 1px solid #797979;
-    	color: #565656;
-	}
-
-	form textarea {
-		margin: .25em auto;
-		width: 75%;
-		max-width: 600px;
-		height: 12em;
-		font-size: 1em;
-		padding: .2em;
-		color: #565656;
-		background-color: #CCCCCC;
-	    border: 1px solid #797979;
-	}
-
-	button {
-		margin: .25em auto;
-		width: 75%;
-		max-width: 600px;
-		background-color: #8C2020;
-    	border: 1px solid #500E0E;
-    	font-size: 1em;
-    	height: 2em;
-	}
-}
+body{background-color:#FBFBFB;margin:0;font-family:'Noto Sans', sans-serif;-webkit-font-smoothing:antialiased !important}#wrapper{color:#484848;width:100%;margin:auto;text-align:center;font-size:.8em}h1{color:#8C2020;font-family:'Cinzel', serif}h3{padding:0 2em}h3 span{color:#8C2020}#logo{margin-top:1em;width:75%}#contact-div{text-align:center;margin:auto;color:gray}form input{font-family:'Noto Sans', sans-serif;display:block;margin:.25em auto;width:95%;font-size:1.2em;padding:.2em;background-color:#ccc;border:1px solid #797979;color:#565656}form textarea{font-family:'Noto Sans', sans-serif;display:block;margin:.25em auto;width:95%;height:12em;font-size:1.2em;padding:.2em;color:#565656;background-color:#ccc;border:1px solid #797979}button{font-family:'Noto Sans', sans-serif;margin:.25em auto;width:95%;height:3em;background-color:#8C2020;border:1px solid #500E0E;font-size:1.2em;color:#C7C6C6}button:hover{cursor:pointer}@media screen and (min-width: 28.75em){#logo{width:58%}#wrapper{font-size:.9em}form input{width:75%;font-size:1em}form textarea{width:75%;font-size:1em}button{width:75%;font-size:1em}}@media screen and (min-width: 40.5em){#logo{width:15%}#wrapper{font-size:1.3em}form input{max-width:600px}form textarea{margin:.25em auto;max-width:600px}button{max-width:600px;height:2em}}
+/*# sourceMappingURL=main.css.map */
