--- a/views/index.erb
+++ b/views/index.erb
@@ -9,8 +9,10 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
-			<h1>Welcome to Citadel Metal Supply!</h1>
+			<div id='header-div'>
+				<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
+			</div>
+			<h1>Welcome to Citadel Metal Supply</h1>
 			<h3 id='about-us'>About Us</h3>
 			<p id='intro'>	We are the sole distributor in North Texas for Central Texas Metal Roofing Supply. We carry several varieties of standing seam, exposed fastener, and soffit panels for residential and commercial projects.  We offer trim and accessories required for complete installation of each panel system.  Whether your job is a simple awning or a complex architectural standing seam roof, we have the materials you will need for a professional quality installation.</p>
 			<h3>For a more in depth look at what we have offer, please click <a href="/info">here</a>.</h3>
