--- a/public/main.scss
+++ b/public/main.scss
@@ -10,7 +10,7 @@ $red-button-text-color: #FBFBFB;
 $red-button-border-color: #500E0E;
 
 body {
-	background-color: #B1B1B1;
+	background-color: #2F2F2F;
 	margin: 0;
 	font-family: 'Noto Sans', sans-serif;
 	-webkit-font-smoothing:antialiased !important;
@@ -27,8 +27,8 @@ body {
 }
 
 #header-div {
-	border-bottom: 1px solid $input-border-color;
-	background-color: #2F2F2F;
+	border-bottom: 1px solid #2F2F2F;
+	background-color: #B1B1B1;
 }
 
 h1 {
