--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-      		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-      		<link href='https://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
-      		<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  		<link href='https://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
+  		<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+  		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="main.css">
 		<title>Citadel Metal Supply, LLC</title>
 	</head>
