--- a/public/main.scss
+++ b/public/main.scss
@@ -62,6 +62,12 @@ h3 {
 	top: -55px;
 }
 
+.roof_image {
+	border: 1px solid $input-border-color;
+	width: 100%;
+	max-width: 650px;
+}
+
 #contact-div{
 	text-align: center;
 	margin: auto;
