--- a/views/index.erb
+++ b/views/index.erb
@@ -21,6 +21,9 @@
 			With over 30 years of experience in metal roofing, we are dedicated to provide high quality materials and professional installation services to our customers.
 
 			We carry several varieties of standing seam, exposed fastener, and soffit panels for residential and commercial projects.  We offer trim and accessories required for complete installation of each panel system.  Whether your job is a simple awning or a complex architectural standing seam roof, we have the materials and services you need for a professional quality installation.</p>
+
+			<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="">
+
 			<h3>For a more in depth look at what we have offer, please click <a href="/info">here</a>.</h3>
 			<h3>For pricing information and any other questions, please email <span>contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<% if flash[:confirmation] %>
@@ -38,5 +41,7 @@
 			    </form>
 			</div>
 		</div>
+		<script src='jquery.js'></script>
+		<script src='main.js'></script>
 	</body>
 </html>
