--- a/views/index.erb
+++ b/views/index.erb
@@ -17,14 +17,18 @@
 			<h1>Welcome to Citadel Metal Supply</h1>
 
 			<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="">
+			
+			<div id='about-div'>
+				<h3 id='about-us'>About Us</h3>
+				<p id='intro'>	Citadel Metal Supply specializes in metal roof installation and serves as a distributor of metal roofing supplies for Central Texas Metal Roofing Supply.
 
-			<h3 id='about-us'>About Us</h3>
-			<p id='intro'>	Citadel Metal Supply specializes in metal roof installation and serves as a distributor of metal roofing supplies for Central Texas Metal Roofing Supply.
+				With over 30 years of experience in metal roofing, we are dedicated to providing high quality materials and professional installation services to our customers.
 
-			With over 30 years of experience in metal roofing, we are dedicated to providing high quality materials and professional installation services to our customers.
-
-			<!-- We carry several varieties of standing seam, exposed fastener, and soffit panels for residential and commercial projects.  We offer trim and accessories required for complete installation of each panel system.  Whether your job is a simple awning or a complex architectural standing seam roof, we have the materials and services you need for a professional quality installation. -->
-			</p>
+				<!-- We carry several varieties of standing seam, exposed fastener, and soffit panels for residential and commercial projects.  We offer trim and accessories required for complete installation of each panel system.  Whether your job is a simple awning or a complex architectural standing seam roof, we have the materials and services you need for a professional quality installation. -->
+				</p>
+			</div>
+			
+			
 
 			
 
