--- a/public/main.css
+++ b/public/main.css
@@ -1,2 +1,147 @@
-body{background-color:#b7b7b7;margin:0;font-family:'Noto Sans', sans-serif;-webkit-font-smoothing:antialiased !important}#wrapper{color:#484848;background-color:#d0d0d0;width:100%;margin:auto;text-align:center;font-size:.8em;padding-bottom:1em}#header-div{background-image:url("stripe.png");background-size:100% 50px;height:50px;margin-top:45px}h1{color:#8C2020;font-family:'Cinzel', serif;margin-top:55px}#intro{text-align:left;padding:0 1em}a{color:#8C2020}h3{padding:0 2em}h3 span{color:#8C2020}#logo{width:150px;position:relative;top:-45px}.roof_image{border:1px solid #909090;width:100%;max-width:650px}#contact-div{text-align:center;margin:auto;color:gray}form input{font-family:'Noto Sans', sans-serif;display:block;margin:.25em auto;width:95%;font-size:1.2em;padding:.2em;background-color:#E6E6E6;border:1px solid #909090;color:#565656}form textarea{font-family:'Noto Sans', sans-serif;display:block;margin:.25em auto;width:95%;height:12em;font-size:1.2em;padding:.2em;color:#565656;background-color:#E6E6E6;border:1px solid #909090}button{font-family:'Noto Sans', sans-serif;margin:.10em auto;width:95%;height:3em;background-color:#8C2020;border:1px solid #500E0E;font-size:1.2em;color:#FBFBFB}button:hover{cursor:pointer}@media screen and (min-width: 28.75em){#wrapper{font-size:.9em}form input{width:75%;font-size:1em}form textarea{width:75%;font-size:1em}button{width:75%;font-size:1em}}@media screen and (min-width: 40.5em){#header-div{height:110px;background-size:100% 110px;background-repeat:no-repeat;margin-top:75px}#logo{width:240px;top:-75px}#wrapper{font-size:1.3em}form input{max-width:600px}form textarea{margin:.25em auto;max-width:600px}button{max-width:600px;height:2em}}
+/*------------ MOBILE ----------------------------------------------------*/
+body {
+  background-color: #b7b7b7;
+  margin: 0;
+  font-family: 'Noto Sans', sans-serif;
+  -webkit-font-smoothing: antialiased !important; }
+
+#wrapper {
+  color: #484848;
+  background-color: #d0d0d0;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  font-size: .8em;
+  padding-bottom: 1em; }
+
+#header-div {
+  background-image: url("stripe.png");
+  background-size: 100% 50px;
+  height: 50px;
+  margin-top: 45px; }
+
+h1 {
+  color: #8C2020;
+  font-family: 'Cinzel', serif;
+  margin-top: 55px; }
+
+#intro {
+  text-align: left;
+  padding: 0 1em; }
+
+.hlink {
+  display: none; }
+
+a {
+  color: #8C2020; }
+
+h3 {
+  padding: 0 2em; }
+  h3 span {
+    color: #8C2020; }
+
+#logo {
+  width: 150px;
+  position: relative;
+  top: -45px; }
+
+.roof_image {
+  border: 1px solid #909090;
+  width: 100%;
+  max-width: 650px; }
+
+#contact-div {
+  text-align: center;
+  margin: auto;
+  color: gray; }
+
+form input {
+  font-family: 'Noto Sans', sans-serif;
+  display: block;
+  margin: .25em auto;
+  width: 95%;
+  font-size: 1.2em;
+  padding: .2em;
+  background-color: #E6E6E6;
+  border: 1px solid #909090;
+  color: #565656; }
+
+form textarea {
+  font-family: 'Noto Sans', sans-serif;
+  display: block;
+  margin: .25em auto;
+  width: 95%;
+  height: 12em;
+  font-size: 1.2em;
+  padding: .2em;
+  color: #565656;
+  background-color: #E6E6E6;
+  border: 1px solid #909090; }
+
+button {
+  font-family: 'Noto Sans', sans-serif;
+  margin: .10em auto;
+  width: 95%;
+  height: 3em;
+  background-color: #8C2020;
+  border: 1px solid #500E0E;
+  font-size: 1.2em;
+  color: #FBFBFB; }
+
+button:hover {
+  cursor: pointer; }
+
+/* ------------------- MID SIZE -----------------------------------*/
+@media screen and (min-width: 28.75em) {
+  #wrapper {
+    font-size: .9em; }
+
+  form input {
+    width: 75%;
+    font-size: 1em; }
+
+  form textarea {
+    width: 75%;
+    font-size: 1em; }
+
+  button {
+    width: 75%;
+    font-size: 1em; } }
+@media screen and (min-width: 55em) {
+  .hlink {
+    display: inline-block;
+    color: #b1b1b1;
+    text-decoration: none; } }
+/* -------------------------------------------- DESKTOP SIZE --------------*/
+@media screen and (min-width: 40.5em) {
+  #header-div {
+    height: 110px;
+    background-size: 100% 110px;
+    background-repeat: no-repeat;
+    margin-top: 75px; }
+    #header-div a {
+      position: relative;
+      top: 40px;
+      margin-right: 20px; }
+
+  #logo {
+    position: absolute;
+    width: 240px;
+    left: 10px;
+    top: 10px; }
+
+  #wrapper {
+    font-size: 1.3em; }
+
+  form input {
+    max-width: 600px; }
+
+  form textarea {
+    margin: .25em auto;
+    max-width: 600px; }
+
+  button {
+    max-width: 600px;
+    height: 2em; } }
+
 /*# sourceMappingURL=main.css.map */
