--- a/views/index.erb
+++ b/views/index.erb
@@ -12,11 +12,14 @@
 	<body>
 		<div id="wrapper">
 			<div id='header-div'>
-				<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
 				<a id='l1' class='hlink' href="">About Us</a>
 				<a id='l2' class='hlink' href="">Services</a>
 				<a id='l3' class='hlink' href="">Gallery</a>
 				<a id='l4' class='hlink' href="">Contact Us</a>
+				
+				<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
+				
+				<img id='menu-img' src="menu.png" alt="">
 			</div>
 			<h1>Welcome to Citadel Metal Supply</h1>
 
