--- a/public/main.scss
+++ b/public/main.scss
@@ -17,6 +17,10 @@ body {
 	-webkit-font-smoothing:antialiased !important;
 } 
 
+.disableClick {
+	pointer-events: none;
+}
+
 #wrapper {
 	color: $main-text-color;
 	background-color: $main-bg-color;
@@ -189,6 +193,10 @@ button:hover {
 @media screen and (min-width: 55em){
 
 	#menu-img {
+		display: none;
+	}
+
+	.hlink {
 		display: none;
 	}
 
