--- a/views/contactUs.erb
+++ b/views/contactUs.erb
@@ -16,16 +16,20 @@
 				<a id='l2' class='hlink-d' href="">Services</a>
 				<a id='l3' class='hlink-d' href="">Gallery</a>
 				<a id='l4' class='hlink-d' href="/contactUs">Contact Us</a>
-				<a id='l1' class='hlink' href="/">About Us</a>
-				<a id='l2' class='hlink' href="">Services</a>
-				<a id='l3' class='hlink' href="">Gallery</a>
-				<a id='l4' class='hlink' href="/contactUs">Contact Us</a>
+				<a id='l1' class='hlink disableClick' href="/">About Us</a>
+				<a id='l2' class='hlink disableClick' href="">Services</a>
+				<a id='l3' class='hlink disableClick' href="">Gallery</a>
+				<a id='l4' class='hlink disableClick' href="/contactUs">Contact Us</a>
 				
 				<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
 				
 				<img id='menu-img' src="menu.png" alt="">
 			</div>
 			<h1>Contact Us</h1>
+
+			<h3>Joel Baze, Owner</h3>
+			<h3>joel@citadelmetalsupply.com</h3>
+			<h3>(469) 993-8157</h3>
 
 			<h3>For pricing information and any other questions, please email <span>contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 			<% if flash[:confirmation] %>
