--- a/views/index.erb
+++ b/views/index.erb
@@ -16,17 +16,17 @@
 				<a id='l2' class='hlink-d' href="">Services</a>
 				<a id='l3' class='hlink-d' href="">Gallery</a>
 				<a id='l4' class='hlink-d' href="/contactUs">Contact Us</a>
-				<a id='l1' class='hlink' href="/">About Us</a>
-				<a id='l2' class='hlink' href="">Services</a>
-				<a id='l3' class='hlink' href="">Gallery</a>
-				<a id='l4' class='hlink' href="/contactUs">Contact Us</a>
+				<a id='l1' class='hlink disableClick' href="/">About Us</a>
+				<a id='l2' class='hlink disableClick' href="">Services</a>
+				<a id='l3' class='hlink disableClick' href="">Gallery</a>
+				<a id='l4' class='hlink disableClick' href="/contactUs">Contact Us</a>
 				
 				
 				<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
 				
 				<img id='menu-img' src="menu.png" alt="">
 			</div>
-			<h1>Welcome to Citadel Metal Supply</h1>
+			<h1>Welcome to Citadel Metal Supply and Installation</h1>
 
 			<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="">
 			
