--- a/views/index.erb
+++ b/views/index.erb
@@ -1,47 +1,33 @@
 <html>
 	<head>
-		<meta charset="UTF-8"/>
-  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  		<link href='https://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
-  		<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-  		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<%= erb :'templates/head_main' %>
 		<link rel="stylesheet" href="main.css">
 		<title>Citadel Metal Supply, LLC</title>
 	</head>
 	<body>
+
 		<div id="wrapper">
-			<div id='header-div'>
-				<a id='l1' class='hlink-d' href="/">About Us</a>
-				<a id='l2' class='hlink-d' href="">Services</a>
-				<a id='l3' class='hlink-d' href="">Gallery</a>
-				<a id='l4' class='hlink-d' href="/contactUs">Contact Us</a>
-				<a id='l1' class='hlink disableClick' href="/">About Us</a>
-				<a id='l2' class='hlink disableClick' href="">Services</a>
-				<a id='l3' class='hlink disableClick' href="">Gallery</a>
-				<a id='l4' class='hlink disableClick' href="/contactUs">Contact Us</a>
-				
-				
-				<img name="citadel-logo" id="logo" src="http://i.imgur.com/jO0q0o4.png" alt="">
-				
-				<img id='menu-img' src="menu.png" alt="">
-			</div>
+			
+			<%= erb :'templates/header' %>
+
 			<h1>Welcome to Citadel Metal Supply and Installation</h1>
 
-			<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="">
+			<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="Image Load Failed">
 			
 			<div id='about-div'>
+
 				<h3 id='about-us'>About Us</h3>
+
 				<p id='intro'>	Citadel Metal Supply specializes in metal roof installation and serves as a distributor of metal roofing supplies for Central Texas Metal Roofing Supply.
 
 				With over 30 years of experience in metal roofing, we are dedicated to providing high quality materials and professional installation services to our customers.
-
-				<!-- We carry several varieties of standing seam, exposed fastener, and soffit panels for residential and commercial projects.  We offer trim and accessories required for complete installation of each panel system.  Whether your job is a simple awning or a complex architectural standing seam roof, we have the materials and services you need for a professional quality installation. -->
 				</p>
+				
 			</div>
+
 		</div>
 
-		<script src='jquery.js'></script>
-		<script src='main.js'></script>
+		<%= erb :'templates/scripts' %>
+
 	</body>
 </html>
