--- a/views/templates/scripts.erb
+++ b/views/templates/scripts.erb
@@ -2,4 +2,5 @@
 <!-- All of the Javascript Scripts that need to be included -->
 
 <script src='jquery.js'></script>
+<script src='img_load.js'></script>
 <script src='main.js'></script>
