--- a/public/main.scss
+++ b/public/main.scss
@@ -25,6 +25,7 @@ body {
 	color: $main-text-color;
 	background-color: $main-bg-color;
 	width:100%;
+	height: 100%;
 	margin: auto;
 	text-align: center;
 	font-size: .8em;
@@ -147,17 +148,40 @@ button:hover {
 	cursor:pointer;
 }
 
+#gal-image {
+	width: 100%;
+	max-width: 650px;
+	text-align: center;
+	margin: auto;
+}
+
+#gallery-div {
+	
+	position: absolute;
+	text-align: center;
+
+	div {
+		position: absolute;
+		//background-color: rgba(0,0,0,.5);
+		width: 50px;
+		height: 100%;
+		cursor: pointer;
+	}
+
+	#scroll-left {
+		
+	}
+
+	#scroll-right {
+		right: 0px;
+		top: 0px;
+	}
+}
+
 
 
 /* ------------------- MID SIZE -----------------------------------*/
 @media screen and (min-width: 28.75em){
-
-	// #header-div {
-	// 	height: 110px;
-	// 	background-size: 100% 110px;
-	// 	background-repeat: no-repeat;
-	// 	margin-top: 87px;
-	// }
 
 	#logo {
 		top: -215px;
