changed dad's company position to COO

--- a/views/contactUs.erb
+++ b/views/contactUs.erb
@@ -11,7 +11,7 @@
 
 			<h1>Contact Us</h1>
 
-			<h3>Joel Baze, Owner</h3>
+			<h3>Joel Baze, Chief Operating Officer</h3>
 			<h3>joel@citadelmetalsupply.com</h3>
 			<h3>(469) 993-8157</h3>
 
