--- a/views/index.erb
+++ b/views/index.erb
@@ -18,9 +18,13 @@
 
 				<h3 id='about-us'>About Us</h3>
 
-				<p id='intro'>	Citadel Metal Supply specializes in metal roof installation and serves as a distributor of metal roofing supplies for Central Texas Metal Roofing Supply.
+				<p id='intro'>
+					Citadel Metal Supply specializes in metal roof installation and serves as a distributor of metal roofing supplies for Central Texas Metal Roofing Supply.  With over 30 years of experience in metal roofing, we are dedicated to providing high quality materials and professional installation services to our customers.  We have selected sub-contractors who provide proper installation, allowing our customers to experience a complete solution for their metal roofing needs, from roll forming to a finished product.
+				</p>
 
-				With over 30 years of experience in metal roofing, we are dedicated to providing high quality materials and professional installation services to our customers.
+				<h3><b>Joel Baze</b> - Chief Operating Officer</h3>
+				<p id='joel-about'>
+					Joel has been in the metal roofing industry for over 30 years.  He has experience at every level of the metal roofing profession; including, laborer, lead, foreman, estimator, project manager, and owner.  Joel's passionate about Architectural Sheet Metal.  His work includes the Federal Courthouse in Austin, the McClennan County courthouse, domed projects at the University of Baylor campus in Waco as well as various other courthouses, churches, warehouses, and community buildings.  Joel has completed Historical Society home projects and personal residences of all sizes and roof layouts.  Joel is familiar with flashing and trims, coping, metal fascia, soffits, gutters, and downspouts.  He is OSHA 30 certified and has led a past roofing company to be 1 of only 6 ANSI/SPI ES1 compliant shops in Texas.
 				</p>
 				
 			</div>
