--- a/views/services.erb
+++ b/views/services.erb
@@ -16,10 +16,27 @@
 				We carry several varieties of standing seam, exposed fastener, and soffit panels for residential and commercial projects.  We offer trim and accessories required for complete installation of each panel system.  Whether your job is a simple awning or a complex architectural standing seam roof, we have the materials and services you need for a professional quality installation.
 			</p>
 
+			<p id='intro'>
+				Color Charts: <a href="\chart_1.pdf">Chart 1</a>, <a href="\chart_2.pdf">Chart 2</a>, <a href="\chart_3.pdf">Chart 3</a>
+			</p>
+
+			<p id='intro'>
+				Panel Profiles: <a href="http://www.ctmrs.com/panels.asp">CTMRS Profiles</a>
+			</p>
+
 			<h3>Installation</h3>
 			<p id='intro'>
 				Citadel Metal Supply specializes in metal roof installation.
 				With over 30 years of experience in metal roofing, we are dedicated to providing high quality materials and professional installation services to our customers.
+
+			</p>
+			<p id='intro'>
+				<b>Installation Certifications</b>: CTMRS, MBCI, Berridge, Petersens Aluminum, Nucor, NCI, Metal Sales, McElroy
+				
+			</p>
+
+			<p id='intro'>
+				<b>Panel Experience</b>: Snap Loc, Loc Seam, Batten Loc, Super Loc, Double Loc, Ultra Desk, high and low seam Tee panel, Z Loc, C Loc, tapered panels, curved barrel roofs, concave and convex panels
 			</p>
 		</div>
 		
