--- a/public/main.css
+++ b/public/main.css
@@ -1,205 +1,2 @@
-/*------------ MOBILE ----------------------------------------------------*/
-body {
-  background-color: #b7b7b7;
-  margin: 0;
-  font-family: 'Noto Sans', sans-serif;
-  -webkit-font-smoothing: antialiased !important; }
-
-.disableClick {
-  pointer-events: none; }
-
-#wrapper {
-  color: #484848;
-  background-color: #d0d0d0;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  text-align: center;
-  font-size: .8em;
-  padding-bottom: 1em; }
-
-#header-div {
-  display: block;
-  background-image: url("stripe.png");
-  background-size: 100% 50px;
-  height: 50px;
-  margin-top: 45px; }
-
-#menu-img {
-  position: absolute;
-  width: 35px;
-  height: 24px;
-  right: 10px;
-  top: 58px;
-  cursor: pointer; }
-
-.hlink-d {
-  display: none; }
-
-h1 {
-  color: #8C2020;
-  font-family: 'Cinzel', serif;
-  margin-top: 70px; }
-
-#intro {
-  text-align: left;
-  padding: 0 1em; }
-
-.hlink {
-  position: relative;
-  display: block;
-  top: 50px;
-  background-color: #e6e6e6;
-  text-decoration: none;
-  border-bottom: 1px solid #DADADA;
-  padding: 8px;
-  text-align: left;
-  font-family: 'Cinzel', serif;
-  font-size: 1.3em;
-  opacity: 0; }
-
-a {
-  color: #8C2020; }
-
-h3 {
-  padding: 0 2em; }
-  h3 span {
-    color: #8C2020; }
-
-#logo {
-  width: 150px;
-  position: relative;
-  top: -200px; }
-
-.roof_image {
-  border: 1px solid #909090;
-  width: 100%;
-  max-width: 650px; }
-
-#contact-div {
-  text-align: center;
-  margin: auto;
-  color: gray; }
-
-form input {
-  font-family: 'Noto Sans', sans-serif;
-  display: block;
-  margin: .25em auto;
-  width: 95%;
-  font-size: 1.2em;
-  padding: .2em;
-  background-color: #E6E6E6;
-  border: 1px solid #909090;
-  color: #565656; }
-
-form textarea {
-  font-family: 'Noto Sans', sans-serif;
-  display: block;
-  margin: .25em auto;
-  width: 95%;
-  height: 12em;
-  font-size: 1.2em;
-  padding: .2em;
-  color: #565656;
-  background-color: #E6E6E6;
-  border: 1px solid #909090; }
-
-button {
-  font-family: 'Noto Sans', sans-serif;
-  margin: .10em auto;
-  width: 95%;
-  height: 3em;
-  background-color: #8C2020;
-  border: 1px solid #500E0E;
-  font-size: 1.2em;
-  color: #FBFBFB; }
-
-button:hover {
-  cursor: pointer; }
-
-#gal-image {
-  width: 100%;
-  max-width: 650px;
-  text-align: center;
-  margin: auto; }
-
-#gallery-div {
-  position: absolute;
-  text-align: center; }
-  #gallery-div div {
-    position: absolute;
-    width: 50px;
-    height: 100%;
-    cursor: pointer; }
-  #gallery-div #scroll-right {
-    right: 0px;
-    top: 0px; }
-
-/* ------------------- MID SIZE -----------------------------------*/
-@media screen and (min-width: 28.75em) {
-  #logo {
-    top: -215px; }
-
-  #wrapper {
-    font-size: .9em; }
-
-  form input {
-    width: 75%;
-    font-size: 1em; }
-
-  form textarea {
-    width: 75%;
-    font-size: 1em; }
-
-  button {
-    width: 75%;
-    font-size: 1em; } }
-/* -------------------------------------------- DESKTOP SIZE --------------*/
-@media screen and (min-width: 55em) {
-  #menu-img {
-    display: none; }
-
-  .hlink {
-    display: none; }
-
-  .hlink-d {
-    position: relative;
-    top: -200px;
-    display: inline-block;
-    color: #b1b1b1;
-    text-decoration: none; }
-
-  #header-div {
-    height: 110px;
-    background-size: 100% 110px;
-    background-repeat: no-repeat;
-    margin-top: 75px; }
-    #header-div a {
-      position: relative;
-      top: 40px;
-      margin-right: 20px; }
-
-  #logo {
-    position: absolute;
-    width: 240px;
-    left: 10px;
-    top: 10px; }
-
-  h1 {
-    font-size: 1.5em; }
-
-  #wrapper {
-    font-size: 1.3em; }
-
-  form input {
-    max-width: 600px; }
-
-  form textarea {
-    margin: .25em auto;
-    max-width: 600px; }
-
-  button {
-    max-width: 600px;
-    height: 2em; } }
-
+body{background-color:#E6E6E6;margin:0;font-family:'Noto Sans', sans-serif;-webkit-font-smoothing:antialiased !important}.disableClick{pointer-events:none}#wrapper{color:#484848;background-color:#E6E6E6;width:100%;height:100%;margin:auto;text-align:center;font-size:.8em;padding-bottom:1em}#header-div{display:block;background-image:url("stripe.png");background-size:100% 50px;height:50px;margin-top:45px}#menu-img{position:absolute;width:35px;height:24px;right:10px;top:58px;cursor:pointer}.hlink-d{display:none}h1{color:#8C2020;font-family:'Cinzel', serif;margin-top:70px}#intro{text-align:left;padding:0 1em}.hlink{position:relative;display:block;top:50px;background-color:#e6e6e6;text-decoration:none;border-bottom:1px solid #DADADA;padding:8px;text-align:left;font-family:'Cinzel', serif;font-size:1.3em;opacity:0}a{color:#8C2020}h3{padding:0 2em}h3 span{color:#8C2020}#logo{width:150px;position:relative;top:-200px}.roof_image{border:1px solid #909090;width:100%;max-width:650px}#contact-div{text-align:center;margin:auto;color:gray}form input{font-family:'Noto Sans', sans-serif;display:block;margin:.25em auto;width:95%;font-size:1.2em;padding:.2em;background-color:#E6E6E6;border:1px solid #909090;color:#565656}form textarea{font-family:'Noto Sans', sans-serif;display:block;margin:.25em auto;width:95%;height:12em;font-size:1.2em;padding:.2em;color:#565656;background-color:#E6E6E6;border:1px solid #909090}button{font-family:'Noto Sans', sans-serif;margin:.10em auto;width:95%;height:3em;background-color:#8C2020;border:1px solid #500E0E;font-size:1.2em;color:#FBFBFB}button:hover{cursor:pointer}#gal-image{width:100%;max-width:650px;text-align:center;margin:auto}#gallery-div{position:absolute;text-align:center}#gallery-div div{position:absolute;width:50px;height:100%;cursor:pointer}#gallery-div #scroll-right{right:0px;top:0px}#joel-about{margin-bottom:30px;text-align:left;padding:10px}@media screen and (min-width: 28.75em){#logo{top:-215px}#wrapper{font-size:.9em}form input{width:75%;font-size:1em}form textarea{width:75%;font-size:1em}button{width:75%;font-size:1em}}@media screen and (min-width: 55em){#menu-img{display:none}.hlink{display:none}.hlink-d{position:relative;top:-200px;display:inline-block;color:#b1b1b1;text-decoration:none}#header-div{height:110px;background-size:100% 110px;background-repeat:no-repeat;margin-top:75px}#header-div a{position:relative;top:40px;margin-right:20px}#logo{position:absolute;width:240px;left:10px;top:10px}h1{font-size:1.5em}#wrapper{font-size:1.3em}form input{max-width:600px}form textarea{margin:.25em auto;max-width:600px}button{max-width:600px;height:2em}p{max-width:60%;margin:auto;margin-top:10px}}
 /*# sourceMappingURL=main.css.map */
