--- a/public/main.scss
+++ b/public/main.scss
@@ -185,6 +185,10 @@ button:hover {
 	padding: 10px;
 }
 
+#joel-img
+{
+	margin-top: 60px;
+}
 
 /* ------------------- MID SIZE -----------------------------------*/
 @media screen and (min-width: 28.75em){
