--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -10,13 +10,18 @@
 			<h1>Gallery</h1>
 			<div id='gal-image'>
 				<div id='gallery-div'>
-					<div id='scroll-left'></div>
-					<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="Image Load Failed">
-					<div id='scroll-right'></div>
+					<img src="roof_1.png" name='roof_1' class='roof_image' alt="Image Load Failed">
 				</div>
 			</div>
-			
-			
+			<div class='thumb-pics'>
+				<img class='thumbnail' src='roof_1.png'>
+				<img class='thumbnail' src='roof_2.png'>
+				<img class='thumbnail' src='roof_3.jpg'>
+				<img class='thumbnail' src='roof_4.png'>
+				<img class='thumbnail' src='roof_5.jpg'>
+			</div>
+
+
 		</div>
 
 		<%= erb :'templates/scripts' %>
