--- a/public/main.css
+++ b/public/main.css
@@ -71,10 +71,13 @@ h3 {
   position: relative;
   top: -200px; }
 
+.img-div {
+  max-height: 500px; }
+
 .roof_image {
   border: 1px solid #909090;
-  width: 100%;
-  max-width: 650px; }
+  max-width: 100%;
+  max-height: 500px; }
 
 #contact-div {
   text-align: center;
@@ -118,22 +121,23 @@ button:hover {
   cursor: pointer; }
 
 #gal-image {
-  width: 100%;
-  max-width: 650px;
+  width: 650px;
+  height: 500px;
   text-align: center;
   margin: auto; }
 
-#gallery-div {
-  position: absolute;
-  text-align: center; }
-  #gallery-div div {
-    position: absolute;
-    width: 50px;
-    height: 100%;
-    cursor: pointer; }
-  #gallery-div #scroll-right {
-    right: 0px;
-    top: 0px; }
+.thumb-pics {
+  margin: auto;
+  margin-top: 50px;
+  height: 400px; }
+  .thumb-pics img {
+    cursor: pointer;
+    height: 100px;
+    border: 1px solid rgba(100, 100, 100, 0.5);
+    border-radius: 4px;
+    padding: 4px; }
+  .thumb-pics img:hover {
+    box-shadow: 0 0 2px 1px rgba(120, 140, 186, 0.5); }
 
 #joel-about {
   margin-bottom: 30px;
