--- a/views/index.erb
+++ b/views/index.erb
@@ -7,13 +7,14 @@
 	<body>
 
 		<div id="wrapper">
-			
+
 			<%= erb :'templates/header' %>
 
 			<h1>Welcome to Citadel Metal Supply and Installation</h1>
+			<div class='img-div'>
+				<img src="roof_1.png" name='roof_1' class='roof_image' alt="Image Load Failed">
+			</div>
 
-			<img src="roof_1.jpg" name='roof_1' class='roof_image' alt="Image Load Failed">
-			
 			<div id='about-div'>
 
 				<h3 id='about-us'>About Us</h3>
@@ -27,7 +28,7 @@
 				<p id='joel-about'>
 					Joel has been in the metal roofing industry for over 30 years.  He has experience at every level of the metal roofing profession; including, laborer, lead, foreman, estimator, project manager, and owner.  Joel's passionate about Architectural Sheet Metal.  His work includes the Federal Courthouse in Austin, the McClennan County courthouse, domed projects at the University of Baylor campus in Waco as well as various other courthouses, churches, warehouses, and community buildings.  Joel has completed Historical Society home projects and personal residences of all sizes and roof layouts.  Joel is familiar with flashing and trims, coping, metal fascia, soffits, gutters, and downspouts.  He is OSHA 30 certified and has led a past roofing company to be 1 of only 6 ANSI/SPI ES1 compliant shops in Texas.
 				</p>
-				
+
 			</div>
 
 		</div>
