added collector calc program

--- a/views/templates/scripts.erb
+++ b/views/templates/scripts.erb
@@ -4,3 +4,5 @@
 <script src='jquery.js'></script>
 <script src='img_load.js'></script>
 <script src='main.js'></script>
+<script src='fraction.js'></script>
+<script src='collector.js'></script>
